fix(presentation): align button to center

--- a/components/Button/button.module.scss
+++ b/components/Button/button.module.scss
@@ -30,7 +30,8 @@
     }
 
     &--secondary {
-        background-image: $color--white;
+        background-image: unset;
+        background-color: $color--white;
     }
 
     &__Icon {
